--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     font-size: 18px;
     color: #6c767d;
     background-color: #ebf1f5;
-    background-image: url(https://api.sunweihu.com/api/bing1/api.php);
+    background-image: url(https://www.todaybing.com/api/today/cn?size=hd);
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: cover;
