--- a/style.css
+++ b/style.css
@@ -144,7 +144,7 @@ strike {
 
 .photo-bg {
     /* background-image: url(assets/background.jpg); */
-    background-image: url(https://i.postimg.cc/tp61M6FT/image.jpg);
+    background-image: url(https://i.postimg.cc/qRCmHc38/131024-2.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
