--- a/style.css
+++ b/style.css
@@ -144,7 +144,7 @@ strike {
 
 .photo-bg {
     /* background-image: url(assets/background.jpg); */
-    background-image: url(https://i.postimg.cc/DwXdZfZT/wo.jpg);
+    background-image: url(http://img.i5e.cc/i/2023/05/30/12zyt53.jpeg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
