--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     font-size: 18px;
     color: #6c767d;
     background-color: #ebf1f5;
-    background-image: url(https://www.todaybing.com/api/today/cn?size=hd);
+    background-image: url(https://bing.joker.cc/api/);
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: cover;
